# pympistandard

./: .gitignore  .pdm-python  README.md  noxfile.py  pyproject.toml  tox.ini
docs/: callbacks.rst  conf.py  index.rst  kind.rst  kinds.rst  parameters.rst  predefined_functions.rst  procedure.rst  procedures.rst
src/pympistandard/: __init__.py  _kinds.py  callback.py  constant.py  export.py  expressions.py  f08.py  f90.py  isoc.py  kind.py  lis.py  namespace.py  parameter.py  predefined_function.py  procedure.py  storage.py  symbol.py  version.py
src/pympistandard/data/: apis.json  mpidb.json
tests/: conftest.py  test_integration.py  test_iso_c.py  test_pympistandard.py
