
[tool.poetry]
name = "pympistandard"
version = "0.1.0"
description = "Python API to the MPI Standard"
authors = ["Martin Ruefenacht <martin.ruefenacht@lrz.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-sugar = "^0.9.4"
black = "^22.1.0"
isort = "^5.10.1"
pytest-watch = "^4.2.0"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
